Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4069

thd_wait_end does not called in some cases in buf_page_read_low in XtraDB engine

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.28a
    • 5.5.29
    • None
    • None

    Description

      in file storage/xtradb/buf/buf0rea.c, buf_read_page_low(),
      thd_wait_begin() is called when synchronous is requested, however thd_wait_end() is not called in case of fil_io() returns error DB_TABLESPACE_DELETED.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sergei Sergei Glushchenko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 10m
                10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.